@@ -1138,8 +1138,8 @@ class AgentMenu(cmd.Cmd):
         # set the text prompt
         self.prompt = '(Empire: '+helpers.color(name, 'red')+') > '
 
-        # shell commands to tab complete
-        self.shellCmds = ["ls","dir","rm","del","pwd","cat","cd","mkdir","rmdir","mv","arp","netstat","ipconfig","ifconfig","net","route","reboot","restart","shutdown","ps","getpid","whoami", "getuid"]
+        # agent commands that have opsec-safe alises in the agent code
+        self.agentCommands = ["ls","dir","rm","del","cp","copy","pwd","cat","cd","mkdir","rmdir","mv","move","ipconfig","ifconfig","route","reboot","restart","shutdown","ps","tasklist","getpid","whoami","getuid"]
 
         # listen for messages from this specific agent
         dispatcher.connect( self.handle_agent_event, sender=dispatcher.Any)
@@ -1193,14 +1193,17 @@ class AgentMenu(cmd.Cmd):
         parts = line.split(" ")
 
         if len(parts) > 0:
-            # check if we got a shell command
-            if parts[0] in self.shellCmds:
+            # check if we got an agent command
+            if parts[0] in self.agentCommands:
                 shellcmd = " ".join(parts)
                 # task the agent with this shell command
                 self.mainMenu.agents.add_agent_task(self.sessionID, "TASK_SHELL", shellcmd)
                 # update the agent log
-                msg = "Tasked agent to run shell command " + line
+                msg = "Tasked agent to run command " + line
                 self.mainMenu.agents.save_agent_log(self.sessionID, msg)
+            else:
+                print helpers.color("[!] Command not recognized.")
+                print helpers.color("[*] Use 'help' or 'help agentcmds' to see available commands.")
 
 
     def do_back(self, line):
@@ -1211,6 +1214,16 @@ class AgentMenu(cmd.Cmd):
     def do_main(self, line):
         "Go back to the main menu."
         raise StopIteration
+
+
+    def do_help(self, *args):
+        "Displays the help menu or syntax for particular commands."
+        
+        if args[0].lower() == "agentcmds":
+            print "\n" + helpers.color("[*] Available opsec-safe agent commands:\n")
+            print "     " + messages.wrap_columns(", ".join(self.agentCommands), " ", width1=50, width2=10, indent=5) + "\n"
+        else:
+            cmd.Cmd.do_help(self, *args)
 
 
     def do_rename(self, line):
@@ -1387,7 +1400,7 @@ class AgentMenu(cmd.Cmd):
 
         if line != "":
             # task the agent with this shell command
-            self.mainMenu.agents.add_agent_task(self.sessionID, "TASK_SHELL", line)
+            self.mainMenu.agents.add_agent_task(self.sessionID, "TASK_SHELL", "shell " + str(line))
             # update the agent log
             msg = "Tasked agent to run shell command " + line
             self.mainMenu.agents.save_agent_log(self.sessionID, msg)
@@ -1820,14 +1833,6 @@ class AgentMenu(cmd.Cmd):
         mline = line.partition(' ')[2]
         offs = len(mline) - len(text)
         return [s[offs:] for s in ["kill"] if s.startswith(mline)]
-
-
-    def complete_shell(self, text, line, begidx, endidx):
-        "Tab-complete a shell command"
-
-        mline = line.partition(' ')[2]
-        offs = len(mline) - len(text)
-        return [s[offs:] for s in self.shellCmds if s.startswith(mline)]
 
 
     def complete_scriptimport(self, text, line, begidx, endidx):
